# leolord-website

./: .gitignore  pyproject.toml  requirements.txt
leolord_website/: app.py
leolord_website/static/css/: main.css
leolord_website/static/js/: matrix-rain.js  yt-player.js
leolord_website/templates/: about.html  base.html  home.html  index.html  media.html  requests.html
